[March 2, 2022 Submission]
Main Submission:
    Added firebase support
    Added user info component backed by Firebase data storage


[Feb 23, 2022 Submission]
Main Submission:
    Added to Piano and Guitar Sections:
        Header w/ genre dropdown
        Search Bar
    Refined card / text / image elements in Piano and Guitar Sections


[Feb 16, 2022 Submission]
Main features:
    Added routing functionality for the following sections:
        Home
        Piano
        Guitar
        Voice
        Flute / Woodwind
Bonus Features:
    Added sheet music cards
    Added image and text above sheet music cards

[Feb 10, 2022 Submission]
Main Features:
    Renamed circular cards to feature-card and added attributes and data binding to accommodate multiple instances
    Added blog section incl. data binding & multiple instances
Bonus Features:
    Added text above feature-card section