@@ -1,8 +1,8 @@
 import { Component } from '@angular/core';
 import { BlogCardModel } from './home-page/blog-card-item.model';
-import { CategoryCardModel } from './store/feature.model';
+import { CategoryCardModel } from './home-page/feature.model';
 import { mock_blog_list } from './home-page/mock-blog-list';
-import { mock_feature_list } from './store/mock-feature-list';
+import { mock_feature_list } from './home-page/mock-feature-list';
 import { mock_sm_card_list } from './category-page/mock-sm-card-list';
 import { SheetMusicCardModel } from './category-page/sheet-music-card.model';
 
