@@ -1,19 +1,0 @@
-export const mock_feature_list = [
-    {
-        img: "assets/find-your-song.jpg",
-        heading: "Find Your Song",
-        body: "Find the sheet music you’re looking for—from beginner to pro, Bach to Prince, and banjo to piano—available in any key."
-    },
-
-    {
-        img: "assets/HP-intro-1.jpg",
-        heading: "Print Instantly",
-        body: "Checkout and print instantly from your desktop or mobile device with our quick and easy purchase process."
-    },
-
-    {
-        img: "assets/HP-intro-2.jpg",
-        heading: "Access Anywhere",
-        body: "Play, transpose and mark up your sheet music anywhere with our free interactive apps for iOS, Android, Mac and PC."
-    }
-];
